Fix translation generation

--- a/translations/CMakeLists.txt
+++ b/translations/CMakeLists.txt
@@ -1,29 +1,24 @@
 # SPDX-FileCopyrightText: (C) 2021 Matthias Fehring / www.huessenbergnetz.de
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-find_program(LRELEASE_CMD_PATH NAMES lrelease-qt5 lrelease REQUIRED)
-set(LRELEASE_CMD ${LRELEASE_CMD_PATH})
-
-message(STATUS "Found lrelease at ${LRELEASE_CMD}")
-
-set(LANGS de)
-
-set(QM_FILES ${CMAKE_CURRENT_BINARY_DIR}/sihhuri.qm)
-set(TS_FILES sihhuri.ts)
-
-set(LRELEASE_OPTIONS "-idbased" "-silent")
-
-foreach(l ${LANGS})
-    set(TRANS_ARGS ${TRANS_ARGS} COMMAND ${LRELEASE_CMD} ${LRELEASE_OPTIONS} sihhuri_${l}.ts -qm ${CMAKE_CURRENT_BINARY_DIR}/sihhuri_${l}.qm)
-    list(APPEND QM_FILES ${CMAKE_CURRENT_BINARY_DIR}/sihhuri_${l}.qm)
-    list(APPEND TS_FILES sihhuri_${l}.ts)
-endforeach(l ${LANGS})
-
-add_custom_target(translations ALL ${LRELEASE_CMD} ${LRELEASE_OPTIONS} sihhuri.ts -qm ${CMAKE_CURRENT_BINARY_DIR}/sihhuri.qm
-    ${TRANS_ARGS}
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    COMMENT "Compiling translation files"
-    SOURCES ${TS_FILES}
+set(sihhuri_TS_FILES
+    sihhuri.ts
+    sihhuri_de.ts
 )
 
-install(FILES ${QM_FILES} DESTINATION ${CMAKE_INSTALL_LOCALEDIR})
+set_source_files_properties(${sihhuri_TS_FILES}
+    PROPERTIES OUTPUT_LOCATION "${CMAKE_BINARY_DIR}/translations"
+)
+
+qt_add_lupdate(sihhuri
+    TS_FILES ${sihhuri_TS_FILES}
+    OPTIONS -no-obsolete -locations none -source-langauge en
+)
+
+qt_add_lrelease(sihhuri
+    TS_FILES ${sihhuri_TS_FILES}
+    QM_FILES_OUTPUT_VARIABLE sihhuri_QM_FILES
+    OPTIONS -idbased
+)
+
+install(FILES ${sihhuri_QM_FILES} DESTINATION ${CMAKE_INSTALL_LOCALEDIR})
